src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>IF(
  $User.Is_Portal_User__c,
  Account__r.Name,
  HYPERLINK(&apos;/&apos; + Account__c, Account__r.Name, &apos;_top&apos;) 
)</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Variance_to_Plan__c</fullName>
        <formula>IF(
  AND(
    NOT(ISBLANK(Total_Project_Budget__c)),
    Total_Project_Budget__c != 0
  ),
  Total_Project_Budget__c - Total_Billable_Amount__c,
  null
)</formula>
        <label>Budget Variance to Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Delivery_Standards__c</fullName>
        <label>Delivery Standards</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Documentation_Provided__c</fullName>
        <label>Documentation Provided</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hours_Variance_to_Plan__c</fullName>
        <formula>IF(
  AND(
    NOT(ISBLANK(Total_Planned_Hours__c)),
    Total_Planned_Hours__c != 0
  ),
  Total_Planned_Hours__c - Total_Number_of_Hours__c,
  null
)</formula>
        <label>Hours Variance to Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_How_To_Log_Time_In_Their_System__c</fullName>
        <label>If/How To Log Time In Their System</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoiced_Separately__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoiced Separately</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Margin_Billable_Amount_Rollup__c</fullName>
        <label>Margin Billable Amount Rollup</label>
        <summarizedField>Assignment__c.Margin_Billable_Amount_Rollup__c</summarizedField>
        <summaryForeignKey>Assignment__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Margin_Cost_Amount_Rollup__c</fullName>
        <label>Margin Cost Amount Rollup</label>
        <summarizedField>Assignment__c.Margin_Cost_Amount_Rollup__c</summarizedField>
        <summaryForeignKey>Assignment__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <formula>Profit_Margin__c  /  Margin_Billable_Amount_Rollup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Not_To_Exceed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not To Exceed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Number_of_Agreements__c</fullName>
        <label>Number of Agreements</label>
        <summaryForeignKey>Project_Agreement__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>This Opportunity does not belong to the selected Account. Please select another Opportunity.</errorMessage>
            <filterItems>
                <field>Opportunity.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <infoMessage>Only Opportunities for the selected Account are shown.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preferred_Meeting_Tool__c</fullName>
        <label>Preferred Meeting Tool</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Primary_Client_Contact_Name__c</fullName>
        <formula>IF(
  $User.Is_Portal_User__c,
  Primary_Client_Contact__r.FirstName + &apos; &apos; + Primary_Client_Contact__r.LastName,
  HYPERLINK(&apos;/&apos; + Primary_Client_Contact__c, Primary_Client_Contact__r.FirstName + &apos; &apos; + Primary_Client_Contact__r.LastName, &apos;_top&apos;) 
)</formula>
        <label>Primary Client Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Client_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Client Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>This Contact does not belong to the selected Account. Please select another Contact.</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <infoMessage>Only Contacts for the selected Account are shown.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profit_Margin__c</fullName>
        <formula>Margin_Billable_Amount_Rollup__c  -  Margin_Cost_Amount_Rollup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_And_Requirement_Management_Tools__c</fullName>
        <label>Project And Requirement Management Tools</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Billing_Code__c</fullName>
        <label>Project Billing Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Project_Health_Notes__c</fullName>
        <label>Internal Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Health_Status__c</fullName>
        <formula>IMAGE(
  CASE(
    Project_Health__c,
    &quot;Yellow&quot;, &quot;/resource/ProjectHealthStatusImages/yellow.png&quot;,
    &quot;Red&quot;, &quot;/resource/ProjectHealthStatusImages/red.png&quot;,  
    &quot;/resource/ProjectHealthStatusImages/green.png&quot;        
  ),
  &quot;Project Health Status&quot;,
  15,
  15
)</formula>
        <label>Project Health Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Health__c</fullName>
        <label>Project Health</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recalculate_Sharing_on_Save__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recalculate Sharing on Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require_Stories_on_Time_Entries__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Stories on Time Entries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_Security_Personnel_Information__c</fullName>
        <label>Required Security/Personnel Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Shared_with_Trekbin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shared with Trekbin?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <label>Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Projected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Story_LOE_Required_Starting_At__c</fullName>
        <globalPicklist>Story_Status</globalPicklist>
        <label>Story LOE Required Starting At</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_LOE_Required_Starting_At__c</fullName>
        <globalPicklist>Task_Status</globalPicklist>
        <label>Task LOE Required Starting At</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Assigned_Budget__c</fullName>
        <label>Total Assigned Budget</label>
        <summarizedField>Assignment__c.Total_Budget__c</summarizedField>
        <summaryForeignKey>Assignment__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Billable_Amount__c</fullName>
        <label>Total Billable Amount</label>
        <summarizedField>Assignment__c.Total_Billable_Amount__c</summarizedField>
        <summaryForeignKey>Assignment__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Amount__c</fullName>
        <label>Total Cost Amount</label>
        <summarizedField>Assignment__c.Total_Cost_Amount__c</summarizedField>
        <summaryForeignKey>Assignment__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Hours__c</fullName>
        <label>Total Number of Hours</label>
        <summarizedField>Assignment__c.Total_Number_of_Hours__c</summarizedField>
        <summaryForeignKey>Assignment__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Planned_Hours__c</fullName>
        <label>Total Planned Hours</label>
        <summarizedField>Assignment__c.Planned_Hours__c</summarizedField>
        <summaryForeignKey>Assignment__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Project_Budget__c</fullName>
        <label>Total Project Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>Active_Projects</fullName>
        <columns>NAME</columns>
        <columns>Total_Number_of_Hours__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Primary_Client_Contact_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Open Projects</label>
    </listViews>
    <listViews>
        <fullName>All_Projects</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Primary_Client_Contact_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Projects</label>
    </listViews>
    <listViews>
        <fullName>Endiem_Active_Projects</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Status_Notes__c</columns>
        <columns>Total_Billable_Amount__c</columns>
        <columns>Total_Number_of_Hours__c</columns>
        <columns>Total_Planned_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Name__c</field>
            <operation>contains</operation>
            <value>endiem</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Endiem Active Projects</label>
        <sharedTo>
            <group>X10K_Executive_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Internal_Active_Projects</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Primary_Client_Contact_Name__c</columns>
        <columns>Status__c</columns>
        <columns>End_Date__c</columns>
        <columns>Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Projected</value>
        </filters>
        <label>Internal - Active Projects</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Administrator</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Projected_projects</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Total_Number_of_Hours__c</columns>
        <columns>End_Date__c</columns>
        <columns>Primary_Client_Contact_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Projected</value>
        </filters>
        <label>Projected Projects</label>
    </listViews>
    <listViews>
        <fullName>Projects_Invoiced_Separately</fullName>
        <columns>NAME</columns>
        <columns>Invoiced_Separately__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoiced_Separately__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Projects Invoiced Separately</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Projects_by_Client</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Project_Health_Notes__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Total_Planned_Hours__c</columns>
        <columns>Total_Number_of_Hours__c</columns>
        <columns>Primary_Client_Contact_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
            <value>Endiem</value>
        </filters>
        <label>Projects by Client</label>
    </listViews>
    <listViews>
        <fullName>Projects_that_are_Yellow_or_red</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Project_Health_Status__c</columns>
        <columns>Project_Health_Notes__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Health__c</field>
            <operation>equals</operation>
            <value>Yellow,Red</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Projected,Open</value>
        </filters>
        <label>Projects that are Yellow or Red</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Projects_with_Negative_Variance</fullName>
        <booleanFilter>1 and 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Budget_Variance_to_Plan__c</columns>
        <columns>Total_Planned_Hours__c</columns>
        <columns>Hours_Variance_to_Plan__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Hours_Variance_to_Plan__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Projects with Negative Variance</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Projects_with_No_Lead</fullName>
        <columns>NAME</columns>
        <columns>Project_Lead__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project_Lead__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Account_Name__c</field>
            <operation>notContain</operation>
            <value>appirio,10k</value>
        </filters>
        <label>Projects with No Lead</label>
    </listViews>
    <listViews>
        <fullName>X10K_Internal_Projects</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Primary_Client_Contact_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Internal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>10K Internal Projects</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X7Summits_Active_Projects</fullName>
        <columns>NAME</columns>
        <columns>Status_Notes__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Total_Billable_Amount__c</columns>
        <columns>Total_Number_of_Hours__c</columns>
        <columns>Total_Planned_Hours__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Name__c</field>
            <operation>contains</operation>
            <value>7Summits</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>7Summits Active Projects</label>
        <sharedTo>
            <group>X10K_Executive_Team</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Delivery_Employee__c</fullName>
        <label>Delivery Employee</label>
    </sharingReasons>
    <validationRules>
        <fullName>End_Date_Must_Be_After_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  NOT(ISBLANK(Start_Date__c)),
  NOT(ISBLANK(End_Date__c)),
  Start_Date__c &gt;= End_Date__c
)</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>The End Date of the Project must be after the Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_BCode_If_Invoiced_Separately</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Invoiced_Separately__c,
ISBLANK(Project_Billing_Code__c)
)</errorConditionFormula>
        <errorDisplayField>Project_Billing_Code__c</errorDisplayField>
        <errorMessage>Please Fill the required field Project Billing Code</errorMessage>
    </validationRules>
</CustomObject>